# Video-links-downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LRGEX-YouTube-Downloader.spec  LRGEX_Video_Downloader.py  README.md  SECURITY.md  SESSION_SUMMARY.md  VideoDownloader.spec  download_media.py  error_log.txt  extract_missing_mp3.py  links.txt  links.txt.example  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
