[project]
name = "lrgex-video-downloader"
version = "4.0.0"
description = "Revolutionary zero-setup video downloader with complete automation for YouTube, TikTok, and MEGA.nz"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gallery-dl>=1.29.7",
    "lxml>=5.4.0",
    "pycryptodome>=3.23.0",
    "pyinstaller>=6.13.0",
    "pywin32>=310",
    "requests>=2.32.3",
    "yt-dlp>=2025.5.22",
]
